[package]
name = "kelsier"
version = "0.1.0"
authors = ["Akash Shakdwipeea <ashakdwipeea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"
ash   = "0.29.0"
error-chain = "0.12.1"
anyhow = "1.0"
shaderc = "0.6"
memoffset = "0.5"